# devconf

./: Cargo.toml  README.md  full.devconf  primitives.devconf  simple.devconf
.cargo/: config.toml
crates/devconf-ast/: Cargo.toml
crates/devconf-ast/src/: config.rs  lib.rs  nodes.rs  property.rs  source.rs  tests.rs  utils.rs  value.rs
crates/devconf-lexer/: Cargo.toml
crates/devconf-lexer/src/: lib.rs  source.rs  token.rs  utils.rs
crates/devconf-nodes/: Cargo.toml
crates/devconf-nodes/src/: ast.rs
crates/devconf-runtime/: Cargo.toml
crates/devconf-runtime/src/: lib.rs  map.rs  property.rs  tests.rs  value.rs
crates/devconf-tychecker/: Cargo.toml
crates/devconf-tychecker/src/: checker.rs  lib.rs  tests.rs
devconf-ext/: README.md  language-configuration.json  package.json  test.devconf
devconf-ext/src/: build.ts
devconf-ext/src/composite/: array.ts
devconf-ext/src/literal/: boolean.ts  brackets.ts  comment.ts  constant.ts  directive.ts  index.ts  keywords.ts  number.ts  operator.ts  string.ts  template.ts
devconf-ext/syntax/composite/: propertyDefinition.ts
devconf-ext/syntax/literal/: identifier.ts  interpolation.ts
devconf-ext/syntaxes/: devconf.tmLanguage.json
examples/: full.devconf  full.rs  if_example.devconf  if_example.rs  simple.devconf  simple.rs
src/: de.rs  error.rs  lib.rs  main.rs  ser.rs  tests.rs
