[package]
name = "devconf-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "crates/devconf-lexer",
  "crates/devconf-ast",
  "crates/devconf-runtime",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.12"
nom = "8.0.0"
winnow = "0.7.11"
ariadne = "0.5.1"

[dependencies]
devconf-lexer = { path = "crates/devconf-lexer" }
devconf-ast = { path = "crates/devconf-ast" }