[package]
name = "devconf-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "crates/devconf-lexer",
  "crates/devconf-ast",
  "crates/devconf-runtime",
  "crates/devconf-tychecker",
  "crates/devconf-nodes",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.12"
winnow = "0.7.11"
ariadne = "0.5.1"
hashbrown = "0.15.4"

[dependencies]
devconf-lexer = { path = "crates/devconf-lexer" }
devconf-ast = { path = "crates/devconf-ast" }
devconf-runtime = { path = "crates/devconf-runtime" }
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true
hashbrown.workspace = true
